--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 rvm:
   - 2.2.2
-before_install: gem install bundler -v 1.10.6
-script:
-  - bundle exec rubocop -c .rubocop.yml
+before_install: 
+  - gem install bundler -v 1.10.6
+  - gem install rubocop
