--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ rvm:
 before_install: 
   - gem install bundler -v 1.10.6
   - gem install rubocop
+  - gem install rake
+script:
+  - bundle exec rubocop -c .rubocop.yml
